[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "C1_echo_example_with_python_and_pika"
version = "1.0.0"
description = "C1 Echo example of a component with Python and Pika."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0"
license-files = [ "LICENSE"]
keywords = ["VALAWAI", "C1", "echo"]
authors = [{ name = "IIIA-CSIC"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.10"
]
dependencies = [
	"pika>=1.3.2",
	"pydantic >= 2.11.4"
	]

[project.urls]
"Documentation" = "https://valawai.github.io/docs/components/C1/echo_example_with_python_and_pika"
"Changelog" = "https://github.com/VALAWAI/C1_echo_example_with_python_and_pika/blob/main/CHANGELOG.md"
"Source" = "https://github.com/VALAWAI/C1_echo_example_with_python_and_pika/tree/main"

[tool.hatch.version]
path = "c1_echo_example_with_python_and_pika/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/c1_echo_example_with_python_and_pika",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
	]
	
[tool.hatch.envs.test]
dependencies = [
	"pytest>=8.3.5",
	"coverage>=7.8.0"
	]
	
[tool.hatch.envs.hatch-test]
extra-dependencies = [
	"requests>=2.32.3",
	"unittest-parametrize>=1.6.0"
	]
	
[tool.coverage.run]
omit = [
    "tests/*"
	]

[tool.coverage.report]
show_missing = true
